Revert "fix: [GIT-536]: text overflow in sync status table cell (#565)" (#570)
This reverts commit 9da44e3d42f9adceeee5d4b71d96a74580245f3d.

--- a/src/components/TableV2/TableV2.css
+++ b/src/components/TableV2/TableV2.css
@@ -71,9 +71,6 @@
   .cell {
     display: inline-block;
     vertical-align: middle;
-
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
 
   [role='columnheader'].resizable {
